# euclidian_dist_calc_pybind11

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
src/: deformation.cpp
src/deformation_detector/: __init__.py  call_cpp.py  call_python.py
src/deformation_detector/data/: milk_carton_0.txt  milk_carton_05.txt  milk_carton_1.txt  milk_carton_15.txt
